Fix add block btn on Safari & Firefox
Use SVG for icon instead of plaintext

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -35,12 +35,21 @@ main {
   height: 56px;
   background: $grey-2;
   border: none;
-  color: $white;
-  font-size: 48px;
   cursor: pointer;
   margin: 12px 0;
   opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: opacity .3s ease-in-out;
+
+  svg {
+    rotate: 45deg;
+
+    path {
+      stroke: white;
+    }
+  }
 
   &:hover {
     opacity: .7;;
